--- a/notes_classes.css
+++ b/notes_classes.css
@@ -1,6 +1,6 @@
 .header-text-2 {
     margin-top: -10px;
-    margin-bottom: 50px;
+    margin-bottom: 10px;
     background: var(--light-sky-blue);
     color: var(--deep-blue);
 }
@@ -33,10 +33,58 @@
 
 .subject__cont header .right {
     display: flex;
-    width: 40%;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
+    width: 55%;
     gap: 20px;
+}
+.top_box {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    width: 400%;
+}
+
+/* Responsive Styles */
+@media screen and (max-width: 600px) {
+    .subject__cont header .right {
+        display: flex;
+        flex-direction: column;
+        width: 45%;
+        margin: 10px auto;
+    }
+    
+    .top_box {
+        display: flex;
+        flex-direction: row;
+        width: 200%;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        
+    }
+    .subject__cont main header {
+        justify-content:space-evenly;
+    }
+    .category__select {
+        margin-left: 2px !important;
+    }
+    .category__select button {
+        font-size: .9rem;
+    }
+    .subject__cont main header .bottom {
+        margin-right: 0px !important;
+        right:-39px;
+    }
+    .subject__cont main header .bottom label {
+        font-size: .9rem;
+        margin-right: 0px !important;
+
+    }
+    .subject__cont main header .bottom select {
+        font-size: .6rem;
+    }
 }
 
 .subject__cont header .right > div {
@@ -48,7 +96,7 @@
 }
 
 .subject__cont header > .top > .right {
-    width: 30%;
+    width: 400%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -60,14 +108,13 @@
     width: 100%;
 }
 
-
 .top__small-box {
     background: #fff;
     border-radius: 12px;
 }
 
 .top__small-box.bottom {
-    width: 100% !important;
+    width: 200% !important;
     text-align: center;
 }
 
@@ -94,11 +141,21 @@
     opacity: 40%;
 }
 
+.subject__cont main {
+    margin-top: 20px;
+}
 
 .subject__cont main header {
     width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.category__select {
+    margin-top: 10px;
+    align-self: flex-start;
+    margin-left: 40px;
 }
 
 .subject__cont main header .bottom {
@@ -118,6 +175,8 @@
 
 .subject__cont main header .bottom select {
     padding: 4px 10px;
+    border-radius: 20px;
+    border-color: var(--pink);
+    
 }
-
 
