--- a/notes_classes.css
+++ b/notes_classes.css
@@ -50,7 +50,6 @@
 
 .subject__cont header .right > div {
     margin: 0 !important;
-    margin-top: ;
 }
 
 .subject__cont header .right .left {
@@ -130,7 +129,7 @@
     margin: 0 !important;
     padding: 0;
     background: none;
-    margin-right: 40px !important;
+    /* margin-right: 40px !important; */
     font-size: 1.2rem;
 }
 
@@ -229,5 +228,13 @@
         border-radius: 10px;
     }
 }
+
+
+@media screen and (max-width: 1270px) and (min-width: 600px) {
+    .subject__cont > main {
+        margin-top: 50px !important;
+    }
+}
+
 
 
