--- a/subjects_chapters.css
+++ b/subjects_chapters.css
@@ -1,6 +1,6 @@
 /* GENERAL + SUBJECT */
 .subject__cont {
-    top: 9.5vh;
+    top: max(9.5vh, 90px);
 }
 
 .subject__cont>header {
@@ -25,6 +25,7 @@
     border-radius: 12px;
     width: 15%;
     font-size: 1.2rem;
+    min-width: 250px;
 }
 
 .info-box>div {
@@ -45,6 +46,7 @@
 
 .subject__cont header .bottom {
     width: 30%;
+    /* min-width: 500px; */
     background: #fff;
     justify-self: center;
     align-self: center;
@@ -136,7 +138,12 @@
 
 .subject footer>.bottom {
     padding: 15px;
-    justify-content: flex-start;
+    justify-content: center;
+}
+
+.completion_box {
+    justify-content: flex-start !important;
+    padding-left: 20px !important;
 }
 
 .subject footer .bottom .left {
@@ -199,11 +206,13 @@
     .info-box {
         width: 45%;
         padding: 10px;
-        font-size: 1rem
+        font-size: 1rem;
+        min-width: 0;
     }
 
     .subject__cont header .bottom {
         width: 94%;
+        min-width: 0;
 
     }
 
@@ -232,6 +241,7 @@
     .subject footer .top {
         padding: 5px;
     }
+
 
     .subject__cont>footer {
         padding: 10px;
@@ -263,13 +273,32 @@
         padding: 10px;
     }
 
+    .completion_box {
+        padding: 8px !important;
+    }
+
     .progress_cont p {
         font-size: .6rem;
     }
 
     .subject footer .bottom .left svg {
-        width: 20px;
-        height: 20px;
+        width: 15px;
+        height: 15px;
         margin-right: 5px;
     }
 }
+
+
+@media screen and (max-width: 1270px) and (min-width: 600px) {
+    .subject__cont>main {
+        margin-top: 0 !important;
+    }
+
+    .completion_box {
+        padding: 10px;
+        font-size: 0.9rem;
+        padding-left: 15px !important;
+    }
+}
+
+
